src/modes/snapshots/ascii_renderer__modes___100_p01_crazy_astra_high__tests__pelagium_aperture049.snap
---
source: src/modes/_100_p01_crazy_astra_high.rs
assertion_line: 471
expression: "plain(& frame(80, 24, 42, 0.0, & [0.49, 0.55, 0.7, 0.6, 0.65]))"
---
                                                                                
                                         **+=\+*++;\                            
                                   /+*+++*++++/+++/++++=|                       
                               /*\+++|=/-----------++-*++===|                   
                 /**+++\++===+=+====///;::|::,|;:/=\\+++--*+\-                  
              \/**+++==\\;-/;--\;--//,:,,  ::: ,,|:/=\*++++=;;/                 
              +\\+--*+++-\,:,,,/,,|,|  /          \:--+++===;\/|                
               \\++++++-----/:,,|,.,              \*--+==;\\//\                 
              /==\\/+++++=;/--                  |\**+++\;;//::                  
                ,/=\\|+/*++==|--\  - /-\/=\ /+++|*+++\==;-/,,                   
                 \::;\\++++/*++++/+++++++++|+++=+\==---/-:,/                    
                    /;;;\--==--+|==---==------;------:\,,,                      
                      :,/;;;;;-----;|;::::/:,,,:|,,,,,/::                       
                      \\/,::,:/,,,,::.,..|.\,,,/ /:://                          
                        \|\ ||  ||    |    \\ /|///                             
                         \\\/ \//     |   //\///  |                             
                           \|\ |      | /////\\|  |                             
                           \ \\\\\   /|\ ///  \|                                
                              |\\--//  \///   /|                                
                               --     ///    //                                 
                                    ///      /
