src/modes/snapshots/ascii_renderer__modes___100_p01_crazy_astra_high__tests__pelagium_max.snap
---
source: src/modes/_100_p01_crazy_astra_high.rs
assertion_line: 485
expression: "plain(& frame(80, 24, 42, 7.0, & std::array::from_fn(|i| PARAMS[i].max)))"
---
                                      -     -                                   
                                --   +/+\-+|++|                                 
                            -  |+|+*++---=----+++;                              
                        /\ |++\++=-/--:/:,,;;\--+/+=;                           
                     |/*\+==|\;-/,,/,   /:  |,|;--++/++==|                      
                     |-*+-;/\-,,,              ,;:;----\/*+++==|                
                     --------:/                  \::;::\--\+----                
                     \++=;//                          ::=\++++=;;/              
                   |/++==;/,                           \++++==\/:;              
                    \++=-\,             -  /- |++|+++\+===-/---::/              
                   |-*++=/ -        /- /+/++=/====\/---/---:::|:                
                   \\-++*-++| //++-+|==------------..,/:,:,,:                   
                      \-+++--+/++=-----:|...: ,,,|,::  |\  \                    
                     |;::,:;---:,:|,/:.|/   ||  |   |   \///                    
                         |,/,,---/-  ///   // //|  /|////                       
                      ---/||--      //    |||// ///////                         
                        //-|\\    ///     | |  / ///                            
                      ///  | \\\--/       | |  | / \|                           
                      |\   |\    -\\\    // |  |   /                            
                       \\\  \\\     \\\    //  |                                
                         \     \\\    \                                         
                                  \\                                            
                                   \\
