src/modes/snapshots/ascii_renderer__modes___100_p01_crazy_astra_high__tests__pelagium_open.snap
---
source: src/modes/_100_p01_crazy_astra_high.rs
assertion_line: 469
expression: "plain(& frame(80, 24, 42, 4.0, & [0.82, 0.2, 0.95, 0.6, 0.4]))"
---
                                                                                
                                                                                
                               /-    /\\  -\\  /-\   -+=\|                      
                          /*|  ++|+-++|++++++/++++-*++++=-*+++=/                
                 |/\\|*+++|++=\\-=----------------/--------*++=/,               
               |-----==;;-------: ,/,  -.:|,, /,:,  :::;=\/**++==//             
               \\++++=;/\:-::- :-                        -\\-+=//::             
                 \\+++++=;|                            \++++=;///,              
                 :::-\\/++==;/--------           |\-+--+=;;-//:\                
                    \;\\/+-+=;|       \\\\  |\|+++\+===----:,,                  
                       |\++==\|         //+/+++=+=--/---,|:                     
                        |+*++=/**   **\/++/=----/,,/,,,:                        
                        -\\\\*/+++-+/++----/,,| :,/|  /\                        
                           ;-----------::|//: //|//////                         
                           /, \\,;|/-//|--/----/////                            
                                \/--\ \\\\-/--    |                             
                               /|   \\\//\\----  --                             
                               |/     \\      ----                              
                               |\       \\\-                                    
                                           --
