src/modes/snapshots/ascii_renderer__modes___100_p01_crazy_astra_high__tests__pelagium_small.snap
---
source: src/modes/_100_p01_crazy_astra_high.rs
assertion_line: 470
expression: "plain(& frame(24, 9, 42, 0.0, & defaults()))"
---
          /-/;++-\|     
   \-----+//----\\+-|   
  \-+=----/    \-+=\/   
   \\\+=---\\-+*+/-/    
    \-------------:     
     \||// |\\|//       
       ||\/|//\/|       
        \-/////
