src/modes/snapshots/ascii_renderer__modes___100_p01_crazy_astra_high__tests__pelagium_t11.snap
---
source: src/modes/_100_p01_crazy_astra_high.rs
assertion_line: 468
expression: "plain(& frame(80, 24, 42, 11.0, & defaults()))"
---
                                             -\                                 
                                /-\  //++--|+++-/+++|                           
                            /- /++\++++|+++/+++/++++*++==|                      
                         -- +++\+==|/=------------\+++--++\|                    
                      |-+++\+===;/-/|:,:;:,;::,|;:-//+++===/                    
                  |++++==;|--::--:,,:,  |,  \:: ,,:\\-++===-|                   
              |-**+++===/\-,,|,,.,                 \+++----\/                   
              =\++++*-+--;:::/:::                  \\+++--=;;/                  
              |-*+++++==/:                         +|-+-\-+==;\|                
              ==\+\++-*++==|  -        /-\/++++++|*++++\++==\///                
               ;;;\*++++++-+++;--+|//+-+++===|====\====;\-----/:                
                 /;;;-|-/+++++/++++|++==|=----------------,,,::                 
                  ;:,:/=---\---=----------,,,/..../,,,,,|::::                   
                     /:,,,:|;::::;;:,,,|,,,./  :/\\ :--/|                       
                       \////,--|,/,/ :|/    |    \\\/////                       
                        /-\ \\/|  ||  |     \\\    -////                        
                          \\ //  |/   |       \\/////\                          
                          \  |\  |\   |\     //// / //                          
                               \  \\   \  ////   ||                             
                                        ///      |                              
                                     -///       //                              
                                                /
