src/modes/snapshots/ascii_renderer__modes___100_p01_crazy_astra_high__tests__pelagium_t4.snap
---
source: src/modes/_100_p01_crazy_astra_high.rs
assertion_line: 467
expression: "plain(& frame(80, 24, 42, 4.0, & defaults()))"
---
                                                                                
                                           -\                                   
                               /|\\ ++++-+/+++/+++**+++=:\                      
                     |-**\|+++-+++|++=|===+=-------++++/*+++==/                 
                 \**++++\===|===/=--/--------/;;;|-----++*/-*++++\              
               |-+++++==\\----/--::::,,/,.|,,|,,,;;::|=\/***++==//              
               =\||/-+++==\\,,,,,, ,/   :          \::;+*+++===\/:|             
                /\\\++++--+\\|-                    / +++==\=;;://,              
                /;;;\+++++==;-\               |--+++++==\;--//::/               
                   /;\//+++==/-         /- /++\++==\=;;/--/,,:,/                
                     :\\++**++=--\  //\/++/++==\=-------,,|:,                   
                      :;\*++++/*++++/+++++/------:,:,,,/:/                      
                       /=\-\--+++----------:,,:,,,,/::|\                        
                        ,,,;/;;;;;=|;:::::,,,,,||//|  /\                        
                           /,,::,:|,/ ,,/   | /|///|///                         
                               |\\//  //  ///////////                           
                               \\\|\\/   ///--//  |/                            
                                 \\\\\\/||///     |                             
                                  |\\|\\\///                                    
                                  |\\\  \\---                                   
                                   \ \\\    \\                                  
                                       \\\
